# python-cookbook

./: .pre-commit-config.yaml  README.md  pyproject.toml
_outputs/: profile.out
configuration/: config.yaml  yaml_with_pydantic.py
logging/: named_logger.py
profiling/: algos.py  cprofile_snakeviz.py
python_cookbook/configuration/: config.yaml  example_yaml_with_pydantic.py
python_cookbook/logging/: example_named_logger.py
python_cookbook/plugins/: example_init_subclass.py
python_cookbook/profiling/: example_cprofile.py  example_cprofile_snakeviz.py
python_cookbook/ros/: simple_action_client.md
python_cookbook/threads/: basic_threading.py  queue_workers.py
threads/: extending_thread_class.py
